--- a/index.html
+++ b/index.html
@@ -9,7 +9,46 @@
     <title>Bootstrap Freelance</title>
 </head>
 <body>
+    <header>
+        <nav class="container text-white">
+            navbar
+        </nav>
+    </header>
     
+    <main>
+        <section id="hero">
+            <div class="container">
+                hero
+            </div>
+        </section>
+        <section id="portfolio">
+            <div class="container">
+                portfolio
+            </div>
+        </section>
+        <section id="about">
+            <div class="container">
+                about us
+            </div>
+        </section>
+        <section id="contacts">
+            <div class="container">
+                contacts
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <section id="t-footer">
+            <div class="container">top footer</div>
+        </section>
+        <section id="b-footer">
+            <div class="container">
+                bottom footer
+            </div>
+        </section>
+    </footer>
+
     <!-- SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
