--- a/index.html
+++ b/index.html
@@ -8,13 +8,35 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Bootstrap Freelance</title>
 </head>
+
 <body>
+    <!-- HEADER -->
     <header>
-        <nav class="container text-white">
-            navbar
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand fw-bold text-uppercase" href="#">start bootstrap</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-grow-0" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-uppercase" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-uppercase" href="#">portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-uppercase">about</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-uppercase">contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    
     <main>
         <section id="hero">
             <div class="container">
