main-add-section-hero

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Bootstrap Freelance</title>
@@ -39,8 +40,17 @@
     </header>
     <main>
         <section id="hero">
-            <div class="container">
-                hero
+            <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
+                <img class="pt-5 w-50 h-auto" src="./img/avatar.svg" alt="">
+                <h1 class="text-uppercase pt-3">start bootstrap</h1>
+                <div class="container w-50 text-center d-flex pt-2">
+                    <hr class="w-25 m-auto hr-custom border-top-white border-3 opacity-100">
+                    <i class="fa-solid fa-star fs-2 px-1"></i>
+                    <hr class="w-25 m-auto hr-custom border-top-white border-3 opacity-100">
+                </div>
+                <div class="pt-2 pb-5">
+                    <span class="text-uppercase">graphic artist - web designer - illustrator</span>
+                </div>
             </div>
         </section>
         <section id="portfolio">
