main-add-section-portfolio

--- a/index.html
+++ b/index.html
@@ -39,24 +39,54 @@
         </nav>
     </header>
     <main>
+        <!-- HERO -->
         <section id="hero">
             <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
                 <img class="pt-5 w-50 h-auto" src="./img/avatar.svg" alt="">
                 <h1 class="text-uppercase pt-3">start bootstrap</h1>
                 <div class="container w-50 text-center d-flex pt-2">
-                    <hr class="w-25 m-auto hr-custom border-top-white border-3 opacity-100">
+                    <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
                     <i class="fa-solid fa-star fs-2 px-1"></i>
-                    <hr class="w-25 m-auto hr-custom border-top-white border-3 opacity-100">
+                    <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
                 </div>
                 <div class="pt-2 pb-5">
                     <span class="text-uppercase">graphic artist - web designer - illustrator</span>
                 </div>
             </div>
         </section>
+        <!-- PORTFOLIO -->
         <section id="portfolio">
-            <div class="container">
-                portfolio
+            <div class="container py-5">
+                <div class="container d-flex flex-column justify-content-center align-items-center">
+                    <h1 class="text-uppercase text-black fs-4">portfolio</h1>
+                    <div class="container w-50 text-center d-flex pt-2">
+                        <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
+                        <i class="fa-solid fa-star fs-2 px-1"></i>
+                        <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
+                    </div>
+                </div>
+                <div class="row pt-4">
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 pb-4">
+                        <img class="w-100 h-auto rounded-3" src="./img/cabin.png" alt="cabin">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 pb-4">
+                        <img class="w-100 h-auto rounded-3" src="./img/cake.png" alt="cake">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 pb-4">
+                        <img class="w-100 h-auto rounded-3" src="./img/circus.png" alt="circus">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 pb-4">
+                        <img class="w-100 h-auto rounded-3" src="./img/game.png" alt="game">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 pb-4">
+                        <img class="w-100 h-auto rounded-3" src="./img/safe.png" alt="safe">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 pb-4">
+                        <img class="w-100 h-auto rounded-3" src="./img/submarine.png" alt="submarine">
+                    </div>
+                </div>
             </div>
+
         </section>
         <section id="about">
             <div class="container">
