--- a/index.html
+++ b/index.html
@@ -86,11 +86,29 @@
                     </div>
                 </div>
             </div>
-
         </section>
+        <!-- ABOUT -->
         <section id="about">
-            <div class="container">
-                about us
+            <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
+                <h1 class="text-uppercase fs-4">about</h1>
+                <div class="container w-50 text-center d-flex pt-2">
+                    <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
+                    <i class="fa-solid fa-star fs-2 px-1"></i>
+                    <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
+                </div>
+            </div>
+            <div class="container pb-5">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 px-5">
+                        <p class="pt-4 px-5">Freelancer is a free bootstrap theme cheated by Start Boorstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customazation.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 px-5">
+                        <p class="pt-4 px-5">Wheter you're a student looking to showcase your work, a professional looking to attract, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container text-center pb-5">
+                <a class="text-decoration-none text-white btn btn-outline-light" href="#"><i class="fa-solid fa-download"></i> Download</a>
             </div>
         </section>
         <section id="contacts">
