--- a/index.html
+++ b/index.html
@@ -111,9 +111,24 @@
                 <a class="text-decoration-none text-white btn btn-outline-light" href="#"><i class="fa-solid fa-download"></i> Download</a>
             </div>
         </section>
+        <!-- CONTACTS -->
         <section id="contacts">
-            <div class="container">
-                contacts
+            <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
+                <h1 class="text-uppercase fs-4">contact me</h1>
+                <div class="container w-50 text-center d-flex pt-2">
+                    <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
+                    <i class="fa-solid fa-star fs-2 px-1"></i>
+                    <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
+                </div>
+                <div class="container px-5 py-2">
+                    <form class="px-5 d-flex flex-column justify-content-center align-content-center">
+                        <input type="text" id="fname" name="fname" placeholder="Name" class="border-top-0 border-start-0 border-end-0 b-bottom-1 border-light-subtle py-2">
+                        <input type="email" id="email" name="mail" placeholder="Email Address" class="border-top-0 border-start-0 border-end-0 b-bottom-1 border-light-subtle py-2">
+                        <input type="text" id="phone-number" name="number" placeholder="Phone Number" class="border-top-0 border-start-0 border-end-0 b-bottom-1 border-light-subtle py-2">
+                        <textarea id="text-area" name="message" rows="4" cols="50" placeholder="Message" class="border-top-0 border-start-0 border-end-0 b-bottom-1 border-light-subtle py-2"></textarea>
+                        <input type="submit" value="Send" class="w-25 my-3 rounded-2 border-0 py-2 my-bttn">
+                    </form>
+                </div>
             </div>
         </section>
     </main>
