--- a/index.html
+++ b/index.html
@@ -134,8 +134,43 @@
     </main>
 
     <footer>
+        <!-- TOP-FOOTER -->
         <section id="t-footer">
-            <div class="container">top footer</div>
+            <div class="container pb-5">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
+                            <span class="text-uppercase text-center">location</span>
+                            <span class="text-center">2215 John Daniel Drive Clark, MO 54243</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
+                            <span class="text-uppercase pb-2">around the web</span>
+                            <div class="row d-flex justify-content-center align-content-center">  
+                                <div class="col-3">
+                                    <span class="d-block rounded-circle border border-white p-2 text-center"><i class="fa-brands fa-facebook-f p-2 text-center"></i></span>
+                                </div>
+                                <div class="col-3">
+                                    <span class="d-block rounded-circle border border-white p-2 text-center"><i class="fa-brands fa-google-plus-g p-2 text-center"></i></span>
+                                </div>
+                                <div class="col-3">
+                                    <span class="d-block rounded-circle border border-white p-2 text-center"><i class="fa-brands fa-twitter p-2 text-center"></i></span>
+                                </div>
+                                <div class="col-3">
+                                    <span class="d-block rounded-circle border border-white p-2 text-center"><i class="fa-brands fa-linkedin-in p-2 text-center"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
+                            <span class="text-uppercase text-center">about freelancer</span>
+                            <span class="text-center">Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="b-footer">
             <div class="container">
