footer-add-bottom-f

--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
                 </div>
             </div>
         </section>
+        <!-- BOTTOM FOOTER -->
         <section id="b-footer">
-            <div class="container">
-                bottom footer
+            <div class="container text-center pt-5">
+                <p class="mb-0 pb-3">Copyright <i class="fa-regular fa-copyright fs-6"></i> Your Website 2019 </p>
             </div>
         </section>
     </footer>
