--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                         <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
                             <span class="text-uppercase text-center">about freelancer</span>
-                            <span class="text-center">Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap</span>
+                            <span class="text-center">Freelance is a free to use, open source Bootstrap theme created by <span class="text-success">Start Bootstrap</span></span>
                         </div>
                     </div>
                 </div>
