--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- HERO -->
         <section id="hero">
             <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
-                <img class="pt-5 w-50 h-auto" src="./img/avatar.svg" alt="">
+                <img class="pt-5 h-auto" src="./img/avatar.svg" alt="">
                 <h1 class="text-uppercase pt-3">start bootstrap</h1>
                 <div class="container w-50 text-center d-flex pt-2">
                     <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
@@ -58,7 +58,7 @@
         <section id="portfolio">
             <div class="container py-5">
                 <div class="container d-flex flex-column justify-content-center align-items-center">
-                    <h1 class="text-uppercase text-black fs-4">portfolio</h1>
+                    <h3 class="text-uppercase text-black">portfolio</h3>
                     <div class="container w-50 text-center d-flex pt-2">
                         <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
                         <i class="fa-solid fa-star fs-2 px-1"></i>
@@ -90,7 +90,7 @@
         <!-- ABOUT -->
         <section id="about">
             <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
-                <h1 class="text-uppercase fs-4">about</h1>
+                <h3 class="text-uppercase">about</h3>
                 <div class="container w-50 text-center d-flex pt-2">
                     <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
                     <i class="fa-solid fa-star fs-2 px-1"></i>
@@ -114,7 +114,7 @@
         <!-- CONTACTS -->
         <section id="contacts">
             <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
-                <h1 class="text-uppercase fs-4">contact me</h1>
+                <h3 class="text-uppercase">contact me</h3>
                 <div class="container w-50 text-center d-flex pt-2">
                     <hr class="w-50 m-auto hr-custom border-top-white border-3 opacity-100">
                     <i class="fa-solid fa-star fs-2 px-1"></i>
@@ -140,13 +140,13 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                         <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
-                            <span class="text-uppercase text-center">location</span>
+                            <span class="text-uppercase fw-bold text-center">location</span>
                             <span class="text-center">2215 John Daniel Drive Clark, MO 54243</span>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                         <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
-                            <span class="text-uppercase pb-2">around the web</span>
+                            <span class="text-uppercase fw-bold pb-2">around the web</span>
                             <div class="row d-flex justify-content-center align-content-center">  
                                 <div class="col-3">
                                     <span class="d-block rounded-circle border border-white p-2 text-center"><i class="fa-brands fa-facebook-f p-2 text-center"></i></span>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                         <div class="container d-flex flex-column justify-content-center align-items-center pt-5">
-                            <span class="text-uppercase text-center">about freelancer</span>
+                            <span class="text-uppercase fw-bold text-center">about freelancer</span>
                             <span class="text-center">Freelance is a free to use, open source Bootstrap theme created by <span class="text-success">Start Bootstrap</span></span>
                         </div>
                     </div>
